# swwOS

./: .clang-format  .gitignore  .gitmodules  .gn  .ninja_log  BUILD.gn  LICENSE  Makefile  README.md  a  build.ninja  build.ninja.in  build.sh  compile_commands.json  compile_flags.txt  download_ovmf.sh  run.sh  swk.elf
incl/: fb.h  font.h  interrupt_controller.h  limine_requests.h  memory.h  pmm.h  spinlock.h  vmm.h
incl/arch/rv64/: plic.h
incl/fdt/: libfdt.h  libfdt_env.h  libfdt_internal.h
include/: acpi.h  bootstub.h  errno.h  interrupts.h  liballoc.h  liminereqs.h  locker.h  log.h  module.h  panic.h  pmm.h  smbios.h  string.h  terminal.h  uacpi  uacpi_compiler.h  utils.h  vfs.h  vmm.h
include/fs/: tar.h
initrd/: hi
modules/: helloworld.c
src/: acpi.c  alloc.c  fb.c  flanterm  kmain.c  liballoc.c  link.ld  locker.c  log.c  main.c  memory.c  mmio_tools.c  pmm.c  rt.c  spinlock.c  string.c  terminal.c  uACPI  uacpi  uacpi.c  vfs.c  vmm.c
src/arch/aarch64/: link.ld  vmm.c
src/arch/rv64/: bootstrap.c  interrupts.s  link.ld  plic.c  vmm.c
src/bootstubs/: limine.c
src/build_configs/: aarch64.ninja  rv64.ninja
src/fdt/: fdt.c  fdt_ro.c  fdt_strerror.c
src/fs/: tar.c  zero.c
vfs/: kernel-rv64  swwk.elf
vfs/EFI/BOOT/: limine.cfg  limine.conf
