executable("kernel-rv64") {
  sources = [ "src/arch/rv64/bootstrap.c", "src/fb.c", "src/main.c" ]
  ldflags = [ "--target=riscv64-none-elf", "-nostdlib", "-ffreestanding", "-T../src/arch/rv64/link.ld" ]
  cflags = [ "--target=riscv64-none-elf", "-ffreestanding", "-std=gnu11", "-I../incl", "-mcmodel=medany" ]
}
